add lambert conversion

--- a/src/drivers/gpsd_client/CMakeLists.txt
+++ b/src/drivers/gpsd_client/CMakeLists.txt
@@ -33,6 +33,7 @@ message("PKG_CONFIG_PATH = " $ENV{PKG_CONFIG_PATH})
 add_message_files(
   FILES
     GPSFix.msg
+    GnssPose.msg
 )
 
 generate_messages(DEPENDENCIES 
@@ -63,5 +64,13 @@ add_executable(${PROJECT_NAME}
     src/client.cpp
     src/gpsdclient.cpp
 )
+add_executable(lambert_node
+    src/lambert.cpp
+)
+
 add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${LIBGPS_LIBRARIES})
+target_link_libraries(lambert_node
+  proj
+  ${catkin_LIBRARIES}
+)
