--- a/src/control/CMakeLists.txt
+++ b/src/control/CMakeLists.txt
@@ -140,6 +140,7 @@ include_directories(
 # add_executable(${PROJECT_NAME}_node src/control_node.cpp)
 add_executable(control src/control.cpp)
 add_executable(target src/target.cpp)
+add_executable(simulator src/simulator.cpp)
 
 
 ## Rename C++ executable without prefix
@@ -159,6 +160,10 @@ target_link_libraries(control
 	${catkin_LIBRARIES}
 )
 target_link_libraries(target
+	${catkin_LIBRARIES}
+)
+
+target_link_libraries(simulator
 	${catkin_LIBRARIES}
 )
 
