--- a/src/drivers/encoders_driver/CMakeLists.txt
+++ b/src/drivers/encoders_driver/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(catkin REQUIRED COMPONENTS
   rospy
   std_msgs
   tf
+  arduino_drivers
 )
 
 ## System dependencies are found with CMake's conventions
@@ -129,7 +130,7 @@ add_executable(encoders_driver src/encoders_driver.cpp)
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
-# add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+#dd_dependencies(encoders_driver ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
 # target_link_libraries(${PROJECT_NAME}_node
