--- a/src/drivers/arduino_drivers/CMakeLists.txt
+++ b/src/drivers/arduino_drivers/CMakeLists.txt
@@ -116,7 +116,8 @@ include_directories(
 # add_executable(${PROJECT_NAME}_node src/arduino_drivers_node.cpp)
 
 add_executable(arduino_driver src/arduino.cpp)
-#add_executable(pid_motor src/pid.cpp)
+add_executable(motor_test src/motor_test.cpp)
+add_executable(pid_motor src/pid.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -134,7 +135,8 @@ add_executable(arduino_driver src/arduino.cpp)
 # )
 
 target_link_libraries(arduino_driver libserial.so ${catkin_LIBRARIES})
-#target_link_libraries(pid_motor ${catkin_LIBRARIES})
+target_link_libraries(pid_motor ${catkin_LIBRARIES})
+target_link_libraries(motor_test ${catkin_LIBRARIES})
 
 #############
 ## Install ##
