--- a/src/drivers/encoders_driver/CMakeLists.txt
+++ b/src/drivers/encoders_driver/CMakeLists.txt
@@ -130,7 +130,7 @@ add_executable(encoders_driver src/encoders_driver.cpp)
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
-#dd_dependencies(encoders_driver ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(encoders_driver ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
 # target_link_libraries(${PROJECT_NAME}_node
